# DipCalcPolutionMetal

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  openapi.yaml
.github/workflows/: ci.yml
docs/: architecture.md  ci-cd.md  data-model.md  kafka.md  postgres-local.md  user-interface.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.jsx  styles.css
include/testdip/: config.hpp  domain.hpp  kafka_producer.hpp  postgres_repository.hpp
migrations/: 001_init.sql  002_seed_metals.sql  003_seed_demo_data.sql
scripts/: verify.sh
src/api/: main.cpp  routes.cpp
src/domain/: concentration_calculator.cpp  number_parser.cpp
src/infra/: config.cpp  kafka_producer.cpp  postgres_repository.cpp
src/worker/: main.cpp
tests/: domain_tests.cpp
